fix layout scroll & overflow

--- a/packages/app/src/theme/index.less
+++ b/packages/app/src/theme/index.less
@@ -29,8 +29,6 @@
 	padding: 0;
 	margin: 0;
 
-	overflow: hidden;
-
 	&.electron {
 		.ant-layout-sider {
 			padding-top: 0px;
@@ -44,8 +42,6 @@ body {
 
 	padding: 0;
 	margin: 0;
-
-	overflow: hidden;
 }
 
 html {
@@ -57,8 +53,6 @@ html {
 	padding: 0;
 	margin: 0;
 
-	overflow: hidden;
-
 	background-color: var(--background-color-primary) !important;
 
 	user-select: none;
@@ -68,8 +62,6 @@ html {
 	text-rendering: optimizeLegibility !important;
 
 	font-family: var(--fontFamily);
-	font-size: calc(16px * var(--fontScale));
-
 
 	-webkit-overflow-scrolling: touch;
 	-webkit-app-region: no-drag;
@@ -114,13 +106,12 @@ html {
 
 	&.centered-content {
 		.content_layout {
-			margin: auto;
+			margin: 0 auto;
 
 			min-width: 400px;
 			max-width: 40%;
 
-			padding-left: 0;
-			padding-right: 0;
+			padding: 0;
 		}
 	}
 }
@@ -166,13 +157,13 @@ svg {
 .app_layout {
 	position: relative;
 
-	width: 100%;
-	height: 100%;
-
-	overflow: hidden;
+	width: 100vw;
 
 	display: flex;
 	flex-direction: row;
+
+	align-items: flex-start;
+	justify-content: flex-start;
 
 	background-color: rgba(var(--layoutBackgroundColor), var(--backgroundColorTransparency)) !important;
 	backdrop-filter: blur(var(--backgroundBlur));
@@ -181,17 +172,15 @@ svg {
 .content_layout {
 	position: relative;
 
+	display: flex;
+	flex-direction: column;
+
+	align-items: flex-start;
+	justify-content: flex-start;
+
 	-webkit-overflow-scrolling: touch;
 
-	box-sizing: border-box;
-
-	overflow: visible;
-
-	overflow-y: overlay;
-	overflow-x: visible;
-
 	width: 100%;
-	height: 100%;
 
 	transition: all 150ms ease-in-out;
 
@@ -349,69 +338,6 @@ svg {
 
 	.__react_modal_image__header {
 		background-color: transparent !important;
-	}
-}
-
-.app_modal_wrapper {
-	box-sizing: border-box;
-
-	position: absolute;
-	top: 0;
-	left: 0;
-
-	display: flex;
-	flex-direction: column;
-
-	align-items: center;
-	justify-content: center;
-
-	width: 100%;
-	height: 100%;
-
-	transition: all 150ms ease-in-out;
-
-	&.active {
-		background-color: rgba(var(--bg_color_6), 0.5);
-
-		backdrop-filter: blur(@modal_background_blur);
-		-webkit-backdrop-filter: blur(@modal_background_blur);
-
-		.app_modal_content {
-			opacity: 1;
-			transform: translateY(0);
-		}
-	}
-
-	.app_modal_content {
-		box-sizing: border-box;
-
-		transition: all 150ms ease-in-out;
-
-		opacity: 0;
-		transform: translateY(100px);
-
-		width: 100%;
-		height: 100%;
-
-		display: flex;
-		flex-direction: column;
-
-		align-items: center;
-		justify-content: center;
-
-		// fixments
-		.postCreator {
-			box-shadow: @card-shadow;
-			-webkit-box-shadow: @card-shadow;
-			-moz-box-shadow: @card-shadow;
-		}
-
-		.searcher {
-			box-sizing: border-box;
-
-			width: 48vw;
-			height: 80vh;
-		}
 	}
 }
 
